<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="activities.MainMenuActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_single_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single_player_text"
            style="@style/VeryLargeCustomTextBold"
            android:layout_gravity="center"
            android:onClick="onButtonClick" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_multi_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multi_player_text"
            style="@style/VeryLargeCustomTextBold"
            android:layout_gravity="center"
            android:onClick="onButtonClick" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_player_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/results_text"
            style="@style/VeryLargeCustomTextBold"
            android:layout_gravity="center"
            android:onClick="onButtonClick" />
    </FrameLayout>

</LinearLayout>
