<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="activities.SinglePlayerResultActivity">

    <TextView
        android:id="@+id/tv_game_result"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="GAME_RESULT"
        style="@style/VeryLargeCustomTextBold"/>

    <TextView
        android:id="@+id/tv_game_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="xxx"
        style="@style/MediumCustomText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_score"
            style="@style/LargeCustomTextBold"/>

        <TextView
            android:id="@+id/tv_score_added"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="XXX"
            style="@style/LargeCustomText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_right_answers"
            style="@style/LargeCustomTextBold"/>

        <TextView
            android:id="@+id/tv_n_right_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="XXX"
            style="@style/LargeCustomText"/>

        <TextView
            android:id="@+id/tv_perc_right_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="(XXX)"
            style="@style/LargeCustomText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_wrong_answers"
            style="@style/LargeCustomTextBold"/>

        <TextView
            android:id="@+id/tv_n_wrong_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="XXX"
            style="@style/LargeCustomText"/>

        <TextView
            android:id="@+id/tv_perc_wrong_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="(XXX)"
            style="@style/LargeCustomText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_n_questions"
            style="@style/LargeCustomTextBold"/>

        <TextView
            android:id="@+id/tv_game_n_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="(XXX)"
            style="@style/LargeCustomText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_difficulty"
            style="@style/LargeCustomTextBold"/>

        <TextView
            android:id="@+id/tv_game_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="XXX"
            style="@style/LargeCustomText"/>
    </LinearLayout>

</LinearLayout>
